    - cherry pick progress nice bar improvements from 
      Michael Forrest (many thanks)
  * softwarecenter/view/appdetailsview.py:
    - show correct maintenance status for non applications
      (LP: #538172)
  * softwarecenter/view/appview.py:
    - use "ubuntu-almost-fixed-height-mode" when available
      to speed up the treeview drawing significantly
      (LP: #514879)

  [ Gary Lasker ]
  * data/ui/SoftwareCenter.ui:
    - don't translate available pane notebook labels
      (LP: #539371)
  * softwarecenter/view/viewswitcher.py:
    - when collapsing a node in the left pane (e.g. "Get Software"),
      select the node (LP: 532774) 
  * softwarecenter/view/appview.py:
    - tweak padding in list view buttons (LP: #537524)  
  * data/templates/AppDetailsView.html,
    data/templates/CategoriesView.html:
    - set following items as not draggable; screenshot thumbnail
      in details view, "Featured Applications" icon and general
      images in categories view (LP: #530163)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 Mar 2010 10:13:26 +0100

software-center (1.1.17) lucid; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/navhistory.py:
    - unescape the nav button label text (LP: #531689)
    - fix up and just use a single __str__ method (LP: #531780)
  * softwarecenter/view/availablepane.py,
    softwarecenter/view/channelpane.py:
    - fix intermittent AttributeError when a previous
      model does not exist when refreshing the apps view
      (LP: #531820)
  
  [ Michael Vogt ]
  * merged lp:~mpt/software-center/bug-499893 (thanks)
  * merged lp:~mpt/software-center/categorization (thanks)
  * merged lp:~michaelforrest/software-center/ui-changes (thanks)
  * data/icons/scalable/apps/partner.svg:
    - add partner icon (LP: #531694)
  * softwarecenter/view/catview.py:
    - do not show header in subsection view
  * softwarecenter/view/availablepane.py:
    - fix race in initial part creation (LP: #531798)
  * debian/control: